# railway-migration-demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  drop_tables.sql  halt_writes.sql  load_envs.py  pyproject.toml  railway.api.toml  railway.worker.toml  rw.example.env  simulate.py
alembic/: env.py
alembic/versions/: 42246a04aa69_init.py
myapp/: config.py  factory.py  filters.py  helpers.py  logs.py  models.py
myapp/cli/: main.py
myapp/routes/: main.py
myapp/static/css/: main.css
myapp/static/js/: main.js
myapp/templates/: base.html
myapp/templates/includes/: footer.html  head.html  navbar.html
myapp/templates/main/: index.html
rps/: config.py  factory.py  logs.py  models.py
rps/cli/: main.py
rps/routes/: auth.py  game.py  system.py
