[project]
name = "rps"
version = "0.1.0"
description = "Rock paper scissors game demo for Railway migration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "quart>=0.20.0",
    "uvicorn>=0.34.0",
    "quart-flask-patch>=0.3.0",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.0.1",
    "psycopg2>=2.9.10",
    "redis>=5.2.1",
    "requests>=2.32.3",
]
